--- a/td.html
+++ b/td.html
@@ -4,7 +4,7 @@
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
 		<link href="master.css" rel="stylesheet" type="text/css" />
 		<script src='qt.js'></script>
-		<script src="td.v3.js"></script>
+		<script src="game.js"></script>
 	</head>
 	<body>
 	
