--- a/td.html
+++ b/td.html
@@ -36,4 +36,24 @@
 		</div>
 	</div>	
 	<script>initGame();</script>
+	
+	<div>
+	Link to GitHub project page <a href = 'https://github.com/sledneck26/tower-defense#tower-defense'>here</a><br>
+	Upgrades to come:
+	<br>
+	<ul>
+		<li>Wave preview</li>
+		<li class = 'strike'>Turrets and bullets for towers</li>
+		<li>Make shooting more accurate</li>
+		<li>Smooth turret swing</li> 
+		<li>Larger Variety of sprites</li>
+		<li class = 'strike'>Upgradeable towers</li>
+		<li>More towers</li>
+		<li>Upgraded menu</li>
+		<li>More intuitive user experience</li>
+	</ul>
+	<audio id = 'background-music' autoplay loop>
+		<source src= '../../img/300 Violin Orchestra - John Quintero.mp3' type = 'audio/mpeg'>
+	</audio>
+	</div>
 </body></html>
